WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167984
[GTK] Fix translatable form validation messages
https://bugs.webkit.org/show_bug.cgi?id=167984
Summary
[GTK] Fix translatable form validation messages
Carlos Garcia Campos
Reported
2017-02-08 05:42:40 PST
Most of them are just wrong. We could simply use the same messages than mac which will also make some tests pass.
Attachments
Patch
(6.06 KB, patch)
2017-02-08 05:46 PST
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-02-08 05:46:09 PST
Created
attachment 300892
[details]
Patch
Carlos Garcia Campos
Comment 2
2017-02-08 08:22:05 PST
Committed
r211871
: <
http://trac.webkit.org/changeset/211871
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug