[GTK] Fix translatable form validation messages https://bugs.webkit.org/show_bug.cgi?id=167984

Reviewed by Michael Catanzaro.

Most of them are just wrong. Use the same mesages than mac, which also makes some tests pass.

Fixes: fast/forms/validation-message-maxLength.html
       fast/forms/validationMessage.html

* platform/gtk/LocalizedStringsGtk.cpp:
(WebCore::validationMessageValueMissingText):
(WebCore::validationMessageValueMissingForCheckboxText):
(WebCore::validationMessageValueMissingForFileText):
(WebCore::validationMessageValueMissingForMultipleFileText):
(WebCore::validationMessageValueMissingForRadioText):
(WebCore::validationMessageValueMissingForSelectText):
(WebCore::validationMessageTypeMismatchText):
(WebCore::validationMessageTypeMismatchForEmailText):
(WebCore::validationMessageTypeMismatchForMultipleEmailText):
(WebCore::validationMessageTypeMismatchForURLText):
(WebCore::validationMessagePatternMismatchText):
(WebCore::validationMessageTooShortText):
(WebCore::validationMessageTooLongText):
(WebCore::validationMessageRangeUnderflowText):
(WebCore::validationMessageRangeOverflowText):
(WebCore::validationMessageStepMismatchText):
(WebCore::validationMessageBadInputForNumberText):

Canonical link: https://commits.webkit.org/185011@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211871 268f45cc-cd09-0410-ab3c-d52691b4dbfc